--- a/deploy/k8s_maker/templates/azure_k8s_05_app.yaml
+++ b/deploy/k8s_maker/templates/azure_k8s_05_app.yaml
@@ -138,7 +138,7 @@ spec:
         - name: celery-worker
           image: {{ dpcreator_app_container }}:{{ dpcreator_container_tag }}
           imagePullPolicy: Always
-          command: ['celery', '-A', 'opendp_project worker', '-l', 'info', '-n', 'worker_dpcreator']
+          command: ['celery', '-A', 'opendp_project', 'worker', '-l', 'info', '-n', 'worker_dpcreator']
           ports:
             - name: dpcreator
               containerPort: 8080
