--- a/deploy/nginx-setup/nginx.conf.template
+++ b/deploy/nginx-setup/nginx.conf.template
@@ -63,7 +63,7 @@ http {
 
         # handle websocket requests
         #
-        location /ws {
+        location /async_messages/ws {
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
