--- a/deploy/k8s_maker/rendered/test_dpcreator_05_2021_0910.yaml
+++ b/deploy/k8s_maker/rendered/test_dpcreator_05_2021_0910.yaml
@@ -200,7 +200,7 @@ spec:
             - name: DJANGO_SETTINGS_MODULE
               value: opendp_project.settings.azure_test_01
             - name: ALLOWED_HOSTS
-              value: "52.191.30.153,dev.dpcreator.org,127.0.0.1,0.0.0.0"
+              value: "13.82.125.69,test.dpcreator.org,127.0.0.1,0.0.0.0"
             - name: DB_USER
               valueFrom:
                 secretKeyRef:
@@ -249,7 +249,7 @@ spec:
             - name: DJANGO_SETTINGS_MODULE
               value: opendp_project.settings.azure_test_01
             - name: ALLOWED_HOSTS
-              value: "52.191.30.153,dev.dpcreator.org,127.0.0.1,0.0.0.0"
+              value: "13.82.125.69,test.dpcreator.org,127.0.0.1,0.0.0.0"
             - name: DB_USER
               valueFrom:
                 secretKeyRef:
@@ -284,7 +284,7 @@ metadata:
 spec:
   type: LoadBalancer
   # IP mapped to dpcreator.2ravens.org
-  loadBalancerIP: 52.191.30.153
+  loadBalancerIP: 13.82.125.69
   selector:
     app: dpcreator
     tier: app
