Updated validation information (#314)
* rename "is_valid" to "is_chain_valid"

* in process #297

* update for impute error check #297

* #297, two tests failing, but okay if run individually ?

* skip two tests #297

* (wait til tomorrow, test issue w/ overlap in results) #297

* these tests are a bit flaky when run w/ everything else: opendp_apps.dataset.tests.test_validation_view_and_serializers

#297

* separate workflow tests #297

* profiles for debugging #297

* fix to subclass for stat_spec #297

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,4 +32,8 @@ jobs:
     - name: Test with pytest
       run: |
         cd server
-        python manage.py test #--exclude-tag=web-client
+        python manage.py test
+        # python manage.py test opendp_apps.analysis opendp_apps.communication opendp_apps.content_pages
+        # python manage.py test opendp_apps.dataset
+        # python manage.py test opendp_apps.dataverses opendp_apps.model_helpers
+        # python manage.py test opendp_apps.profiler opendp_apps.terms_of_access opendp_apps.user
