--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.6.12",
     "vue-google-signin-button": "^1.0.4",
     "vue-i18n": "^8.22.3",
+    "vue-json-viewer": "^2.2.19",
     "vue-router": "^3.5.1",
     "vue-waypoint": "^3.5.2",
     "vuetify": "^2.4.11",
