Prototype for a separate microservice that renders PDFs from .tex strings

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,16 @@ server/static/dist/
 Pipfile
 Pipfile.lock
 *.ddi
+*/production
+*/out
+*.tab
+*.tex
+*.pdf
+*.json
+*.aux
+*.fdb_latexmk
+*cypress*
+*.fls
 
 
 # Byte-compiled / optimized / DLL files
