--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,3 +79,14 @@ services:
       - db
       - redis
       - server
+  latex:
+    build: "./latex"
+    command: python /code/latex/app.py 1234
+    volumes:
+      - .:/code
+    ports:
+      - "1234:1234"
+    depends_on:
+      - db
+      - redis
+      - server
