--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,10 +80,10 @@ services:
       - redis
       - server
   latex:
-    build: "./latex"
+    build: "latex_service"
     env_file:
-      - latex/.env
-    command: python /code/latex/app.py 1234
+      - latex_service/.env
+    command: python /code/latex_service/app.py 1234
     volumes:
       - .:/code
     ports:
