Adding error handling on input and environment variables

--- a/latex_service/.env
+++ b/latex_service/.env
@@ -1,2 +1,4 @@
 export AZURE_STORAGE_CONNECTION_STRING=
 export SAVE_TO_AZURE=
+export LATEX_SERVICE_OUTPUT_DIRECTORY=
+export LATEX_SERVICE_AZURE_CONTAINER=
