--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "vue-router": "^3.5.1",
     "vue-waypoint": "^3.5.2",
     "vuetify": "^2.4.11",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "~4.5.12",
