--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "camelcase-keys": "^7.0.0",
     "decimal.js": "^10.3.1",
     "snakecase-keys": "^4.0.2",
+    "v-tooltip": "^2.1.3",
     "vue": "^2.6.12",
     "vue-google-signin-button": "^1.0.4",
     "vue-i18n": "^8.22.3",
