--- a/.gitignore
+++ b/.gitignore
@@ -175,5 +175,5 @@ server/static_deploy/
 server/release-files/*
 server/scripts_dev/dv_test_creds.py
 .env
-
+!server/opendp_apps/banner_messages/fixtures/*.json
 !server/test_data/pdfs/*.pdf
