--- a/.gitignore
+++ b/.gitignore
@@ -176,4 +176,7 @@ server/release-files/*
 server/scripts_dev/dv_test_creds.py
 .env
 !server/opendp_apps/banner_messages/fixtures/*.json
+!server/opendp_apps/banner_messages/fixtures/*.json
+!server/opendp_apps/dataverses/fixtures/*.json
+!server/opendp_apps/profiler/fixtures/*.json
 !server/test_data/pdfs/*.pdf
