--- a/deploy/k8s_maker/rendered/test.dpcreator.org_07_2021_1208.yaml
+++ b/deploy/k8s_maker/rendered/test.dpcreator.org_07_2021_1208.yaml
@@ -149,7 +149,7 @@ spec:
         # (1) Nginx frontend: Separate requests to static files vs. Django app
         # -------------------------------------------------
         - name: dpcreator-nginx
-          image: ghcr.io/opendp/dpcreator/nginx:latest
+          image: ghcr.io/opendp/dpcreator/nginx:2021-1208
           imagePullPolicy: Always
           ports:
             - containerPort: 80
@@ -178,7 +178,7 @@ spec:
         # (3) Core application: Django + bundled static files
         # -------------------------------------------------
         - name: dpcreator-app
-          image: ghcr.io/opendp/dpcreator/app:latest
+          image: ghcr.io/opendp/dpcreator/app:2021-1208
           imagePullPolicy: Always
           command: [ "azure_start_01.sh" ]
           #command: [ "/bin/sh" ]
@@ -236,7 +236,7 @@ spec:
         # (4) Celery Queue - same image/settings as except for "command"
         # -------------------------------------------------
         - name: celery-worker
-          image: ghcr.io/opendp/dpcreator/app:latest
+          image: ghcr.io/opendp/dpcreator/app:2021-1208
           imagePullPolicy: Always
           command: ['celery', '-A', 'opendp_project', 'worker', '-l', 'info', '-n', 'worker_dpcreator']
           ports:
