--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ export REDIS_HOST=redis
 export REDIS_PORT=6379
 export REDIS_PASSWORD=password
 
-export SENDGRID_API_KEY=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
+export SENDGRID_API_KEY=some-sendgrid-key
 export DEFAULT_FROM_EMAIL=kraffmilleropendptest@gmail.com
 
