--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "vue-waypoint": "^3.5.2",
     "vuetify": "^2.4.11",
     "vuex": "^3.6.2",
+    "vuex-multi-tab-state": "^1.0.17",
     "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
