--- a/.gitignore
+++ b/.gitignore
@@ -182,3 +182,4 @@ server/scripts_dev/dv_test_creds.py
 !server/opendp_apps/content_pages/fixtures/*.json
 !server/test_data/pdfs/*.pdf
 !dev_notes/api_example_analysis_plan.json
+.env
