separate sites fixtures for dev/demo #401

--- a/deploy/k8s_maker/rendered/test.dpcreator.org_07_2022_0118.yaml
+++ b/deploy/k8s_maker/rendered/test.dpcreator.org_07_2022_0118.yaml
@@ -182,7 +182,7 @@ spec:
         - name: dpcreator-app
           image: ghcr.io/opendp/dpcreator/app:latest
           imagePullPolicy: Always
-          command: [ "azure_start_01.sh" ]
+          command: [ "azure_demo.dpcreator.org.sh" ]
           #command: [ "/bin/sh" ]
           # args: [ "-c", "./migrate.sh && python manage.py runserver 0.0.0.0:8000"]
           ports:
