--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,4 @@ server/scripts_dev/dv_test_creds.py
 !server/test_data/pdfs/*.pdf
 !dev_notes/api_example_analysis_plan.json
 .env
+!deploy/dataverse/*.json
