--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ export REDIS_PASSWORD=password
 
 export SENDGRID_API_KEY=
 export DEFAULT_FROM_EMAIL=info@opendp.org
+export ACCOUNT_EMAIL_VERIFICATION=none
