--- a/docker-compose-ci-step2.yml
+++ b/docker-compose-ci-step2.yml
@@ -76,16 +76,16 @@ services:
       - ./client:/e2e
     environment:
       WAIT_HOSTS: server:8000
-  latex:
-    build: "./latex_service"
-    env_file:
-      - latex_service/.env
-    command: python /code/latex_service/app.py 1234
-    volumes:
-      - .:/code
-    ports:
-      - "1234:1234"
-    depends_on:
-      - db
-      - redis
-      - server
+  #latex:
+  #  build: "./latex_service"
+  #  env_file:
+  #    - latex_service/.env
+  #  command: python /code/latex_service/app.py 1234
+  #  volumes:
+  #    - .:/code
+  #  ports:
+  #    - "1234:1234"
+  #  depends_on:
+  #    - db
+  #    - redis
+  #    - server
