API end point for settings #481

--- a/docker-compose-ci-step2.yml
+++ b/docker-compose-ci-step2.yml
@@ -51,6 +51,8 @@ services:
     build: "./server"
     environment:
       - DJANGO_SETTINGS_MODULE=opendp_project.settings.development
+      - VUE_APP_GOOGLE_CLIENT_ID=TEST. Set in docker-compose-ci-step2.yml
+      - VUE_APP_ADOBE_PDF_CLIENT_ID=TEST. Set in docker-compose-ci-step2.yml
     env_file:
       - .env
     command: celery -A opendp_project worker -l info -n worker_dpcreator
