--- a/deploy/k8s_maker/rendered/demo.dpcreator.org_08_2022_0316.yaml
+++ b/deploy/k8s_maker/rendered/demo.dpcreator.org_08_2022_0316.yaml
@@ -1,4 +1,93 @@
 ---
+# reference: https://github.com/kubernetes-operators-book/chapters/blob/master/ch05/database.yaml
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: dpcreator-db-data-configmap
+data:
+  #
+  # Database settings for postgres and Django
+  #
+  DB_HOST: "dpcreator-postgres-service"
+  DB_PORT: "5432"
+  DB_ENGINE: "django.db.backends.postgresql_psycopg2"
+  #
+  # These two variables should have the same value (kludge):
+  POSTGRES_DB: "db_dpcreator"
+  DB_NAME: "db_dpcreator"
+---
+# ---------------------------
+# DPCreator - Postgres Deployment
+# ---------------------------
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: dpcreator-database
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: dpcreator
+      tier: postgres
+  template:
+    metadata:
+      labels:
+        app: dpcreator
+        tier: postgres
+    spec:
+      volumes:
+        # Persistent Disk space to store Postgres files
+        #  Used by dpcreator-postgres container
+        #- name: postgres-persistent-volume
+        #  azureDisk:
+        #    kind: Managed
+        #    diskName: dpcreator-postgres-02
+        #    diskURI: /subscriptions/14d2f886-16d9-4a5b-87f0-7aa1c4608026/resourceGroups/MC_DPCreatorResourceGroup_DPCreatorCluster01_eastus/providers/Microsoft.Compute/disks/dpcreator-postgres-02
+      containers:
+        - name: dpcreator-postgres
+          image: postgres:13
+          imagePullPolicy: Always
+          ports:
+            - name: postgres-port
+              containerPort: 5432
+              protocol: TCP
+          # Persistent Disk space to store Postgres files
+          #volumeMounts:
+          #- name: postgres-persistent-volume
+          #  mountPath: /var/lib/postgresql/data
+          envFrom:
+          - configMapRef:
+              name: dpcreator-db-data-configmap
+          env:
+            - name: POSTGRES_USER
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-auth-secret
+                  key: db_username
+            - name: POSTGRES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-auth-secret
+                  key: db_password
+---
+# ---------------------------
+# DPCreator - Postgres Service
+# ---------------------------
+apiVersion: v1
+kind: Service
+metadata:
+  name: dpcreator-postgres-service
+  labels:
+    app: dpcreator
+    tier: postgres
+spec:
+  clusterIP: None
+  ports:
+    - port: 5432
+  selector:
+    app: dpcreator
+    tier: postgres
+---
 # ----------------------------------------
 # Configmap used for:
 #  dpcreator-app, dpcreator-celery
@@ -24,13 +113,13 @@ data:
   FILE_UPLOAD_MAX_MEMORY_SIZE: "2621440"
   #
   # Require email verification for account creation
-  ACCOUNT_EMAIL_VERIFICATION: "{{ ACCOUNT_EMAIL_VERIFICATION }}"
+  ACCOUNT_EMAIL_VERIFICATION: "mandatory"
   #
   DEFAULT_FROM_EMAIL: "info@opendp.org"
-  # REDIS_HOST: "localhost",
   #
-  # REDIS_PORT: 6379
-  # REDIS_PASSWORD - in the secrets "dpcreator-app-secrets" file
+  #
+  VUE_APP_GOOGLE_CLIENT_ID: "750757442540-4bg3aulcrm802i8pguo851lq8kikf5ge.apps.googleusercontent.com"
+  VUE_APP_ADOBE_PDF_CLIENT_ID: "Needs to be set! (See: specs_demo_dpcreator_org)"
   #
 ---
 apiVersion: apps/v1
@@ -62,7 +151,7 @@ spec:
         # (1) Nginx frontend: Separate requests to static files vs. Django app
         # -------------------------------------------------
         - name: dpcreator-nginx
-          image: {{ dpcreator_nginx_container }}:{{ dpcreator_container_tag }}
+          image: ghcr.io/opendp/dpcreator/nginx:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 80
@@ -91,9 +180,9 @@ spec:
         # (3) Core application: Django + bundled static files
         # -------------------------------------------------
         - name: dpcreator-app
-          image: {{ dpcreator_app_container }}:{{ dpcreator_container_tag }}
+          image: ghcr.io/opendp/dpcreator/app:latest
           imagePullPolicy: Always
-          command: [ "{{ dpcreator_startup_script_filename }}" ]
+          command: [ "azure_demo.dpcreator.org.sh" ]
           #command: [ "/bin/sh" ]
           # args: [ "-c", "./migrate.sh && python manage.py runserver 0.0.0.0:8000"]
           ports:
@@ -124,7 +213,7 @@ spec:
             - name: DJANGO_SETTINGS_MODULE
               value: opendp_project.settings.azure_test_01
             - name: ALLOWED_HOSTS
-              value: "{{ ALLOWED_HOSTS }}"
+              value: "13.82.125.69,demo.dpcreator.org,127.0.0.1,0.0.0.0"
             - name: DB_USER
               valueFrom:
                 secretKeyRef:
@@ -154,7 +243,7 @@ spec:
         # (4) Celery Queue - same image/settings as except for "command"
         # -------------------------------------------------
         - name: celery-worker
-          image: {{ dpcreator_app_container }}:{{ dpcreator_container_tag }}
+          image: ghcr.io/opendp/dpcreator/app:latest
           imagePullPolicy: Always
           command: ['celery', '-A', 'opendp_project', 'worker', '-l', 'info', '-n', 'worker_dpcreator']
           ports:
@@ -185,7 +274,7 @@ spec:
               value: opendp_project.settings.azure_test_01
             # ----------------------------------------------------
             - name: ALLOWED_HOSTS
-              value: "{{ ALLOWED_HOSTS }}"
+              value: "13.82.125.69,demo.dpcreator.org,127.0.0.1,0.0.0.0"
             - name: DB_USER
               valueFrom:
                 secretKeyRef:
@@ -225,7 +314,7 @@ metadata:
 spec:
   type: LoadBalancer
   # IP mapped to dpcreator.2ravens.org
-  loadBalancerIP: {{ loadBalancerIP }}
+  loadBalancerIP: 13.82.125.69
   selector:
     app: dpcreator
     tier: app
