--- a/docker-compose-ci-step2.yml
+++ b/docker-compose-ci-step2.yml
@@ -52,7 +52,8 @@ services:
   celery-queue:
     build: "./server"
     environment:
-      - DJANGO_SETTINGS_MODULE=opendp_project.settings.development
+      - DJANGO_SETTINGS_MODULE=opendp_project.settings.cypress_settings
+      - SKIP_PDF_CREATION_FOR_TESTS=True
     env_file:
       - .env
     command: celery -A opendp_project worker -l info -n worker_dpcreator
