--- a/deploy/k8s_maker/templates/azure_k8s_08_app.yaml
+++ b/deploy/k8s_maker/templates/azure_k8s_08_app.yaml
@@ -31,6 +31,7 @@ data:
   #
   VUE_APP_GOOGLE_CLIENT_ID: "{{ VUE_APP_GOOGLE_CLIENT_ID }}"
   VUE_APP_ADOBE_PDF_CLIENT_ID: "{{ VUE_APP_ADOBE_PDF_CLIENT_ID }}"
+  VUE_APP_WEBSOCKET_PREFIX: "{{ VUE_APP_WEBSOCKET_PREFIX }}"
   #
 ---
 apiVersion: apps/v1
