--- a/docker-compose-cypressdev.yml
+++ b/docker-compose-cypressdev.yml
@@ -54,6 +54,7 @@ services:
       - DJANGO_SETTINGS_MODULE=opendp_project.settings.cypress_settings
       - VUE_APP_GOOGLE_CLIENT_ID=TEST. Set in docker-compose-cypressdev.yml
       - VUE_APP_ADOBE_PDF_CLIENT_ID=TEST. Set in docker-compose-cypressdev.yml
+      - VUE_APP_WEBSOCKET_PREFIX=ws://
     env_file:
       - .env
     command: sh -c "python manage.py show_debug_params && python manage.py runserver 0.0.0.0:8000"
