use environment variable for google client (#529)
* use environment variable for google client

* add "VUE_APP" prefix to environment variable name #481

* API end point for settings #481

* updated env variables in k8s file #481

* get runtime settings from API call, rather than .env file

* remove debug log statement

* #481

* updated k8s #481

* updated k8s #481

* update to DB_HOST variable #481

differentiating the demo and dev instances

* update k8s #481

* updated k8s and temp hardcoded dataset.js for wss:// #481

* Update dataset.js

* update settings in #481

* removed google params, not needed in SignUpForm

* use vueSettings for websocket prefix

* updated url handling with `DPCREATOR_USING_HTTPS` #481

Co-authored-by: Raman Prasad <raman_prasad@harvard.edu>

--- a/docker-compose-cypressdev.yml
+++ b/docker-compose-cypressdev.yml
@@ -52,6 +52,9 @@ services:
     #
     environment:
       - DJANGO_SETTINGS_MODULE=opendp_project.settings.cypress_settings
+      - VUE_APP_GOOGLE_CLIENT_ID=TEST. Set in docker-compose-cypressdev.yml
+      - VUE_APP_ADOBE_PDF_CLIENT_ID=TEST. Set in docker-compose-cypressdev.yml
+      - VUE_APP_WEBSOCKET_PREFIX=ws://
     env_file:
       - .env
     command: sh -c "python manage.py show_debug_params && python manage.py runserver 0.0.0.0:8000"
@@ -62,8 +65,6 @@ services:
     depends_on:
       - client
       - db
-
-
   # ---------------------------------
   # Celery Task Queue
   # - Used for profiling, other longer
@@ -72,7 +73,7 @@ services:
   celery-queue:
     build: "./server"
     environment:
-      - DJANGO_SETTINGS_MODULE=opendp_project.settings.development
+      - DJANGO_SETTINGS_MODULE=opendp_project.settings.cypress_settings
     env_file:
       - .env
     command: celery -A opendp_project worker -l info -n worker_dpcreator
@@ -85,16 +86,4 @@ services:
       - db
       - redis
       - server
-#  latex:
-#    build: "latex_service"
-#    env_file:
-#      - latex_service/.env
-#    command: python /code/latex_service/app.py 1234
-#    volumes:
-#      - .:/code
-#    ports:
-#      - "1234:1234"
-#    depends_on:
-#      - db
-#      - redis
-#      - server
+
