--- a/client/cypress/Dockerfile
+++ b/client/cypress/Dockerfile
@@ -2,7 +2,12 @@
 FROM cypress/included:7.2.0
 
 
-## Add the wait script to the image
+# docker-compose-wait: Set env variable to wait 60 seconds for the server to be ready
+# Reference: https://github.com/ufoscout/docker-compose-wait#additional-configuration-options
+#
+ENV WAIT_TIMEOUT=60
+
+## docker-compose-wait: Add the wait script to the image
 ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.9.0/wait /wait
 RUN chmod +x /wait
 
