--- a/deploy/k8s_maker/rendered/demo.dpcreator.org_08_2022_0321.yaml
+++ b/deploy/k8s_maker/rendered/demo.dpcreator.org_08_2022_0321.yaml
@@ -154,7 +154,7 @@ spec:
         # (1) Nginx frontend: Separate requests to static files vs. Django app
         # -------------------------------------------------
         - name: dpcreator-nginx
-          image: ghcr.io/opendp/dpcreator/nginx:demo
+          image: ghcr.io/opendp/dpcreator/nginx:dpcreator-demo
           imagePullPolicy: Always
           ports:
             - containerPort: 80
@@ -183,7 +183,7 @@ spec:
         # (3) Core application: Django + bundled static files
         # -------------------------------------------------
         - name: dpcreator-app
-          image: ghcr.io/opendp/dpcreator/app:demo
+          image: ghcr.io/opendp/dpcreator/app:dpcreator-demo
           imagePullPolicy: Always
           command: [ "azure_demo.dpcreator.org.sh" ]
           #command: [ "/bin/sh" ]
@@ -246,7 +246,7 @@ spec:
         # (4) Celery Queue - same image/settings as except for "command"
         # -------------------------------------------------
         - name: celery-worker
-          image: ghcr.io/opendp/dpcreator/app:demo
+          image: ghcr.io/opendp/dpcreator/app:dpcreator-demo
           imagePullPolicy: Always
           command: ['celery', '-A', 'opendp_project', 'worker', '-l', 'info', '-n', 'worker_dpcreator']
           ports:
