--- a/docker-compose-ci-step2.yml
+++ b/docker-compose-ci-step2.yml
@@ -34,6 +34,7 @@ services:
     environment:
       - DJANGO_SETTINGS_MODULE=opendp_project.settings.cypress_settings
       - SKIP_PDF_CREATION_FOR_TESTS=True
+      - SKIP_EMAIL_RELEASE_FOR_TESTS=True
       - VUE_APP_GOOGLE_CLIENT_ID=TEST. Set in docker-compose-ci-step2.yml
       - VUE_APP_ADOBE_PDF_CLIENT_ID=TEST. Set in docker-compose-ci-step2.yml
     command: sh -c "./migrate.sh && python manage.py runserver 0.0.0.0:8000"
